--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.3",
-    "lucide-react": "^0.562.0",
-    "react": "^19.2.3",
-    "tone": "^15.0.4",
-    "@google/genai": "^1.37.0"
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "lucide-react": "0.460.0",
+    "tone": "15.0.4",
+    "@google/genai": "1.3.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
